@@ -25,6 +25,7 @@ export(anova.gam, bam, bam.update, concurvity, cSplineDes,
        Predict.matrix.tensor.smooth,
        Predict.matrix.tprs.smooth,
        Predict.matrix.ts.smooth,
+       Predict.matrix.sos.smooth,
        Predict.matrix.mrf.smooth,
        Predict.matrix.pspline.smooth,
        Predict.matrix.random.effect,
@@ -42,6 +43,7 @@ export(anova.gam, bam, bam.update, concurvity, cSplineDes,
        smooth.construct.ps.smooth.spec,
        smooth.construct.re.smooth.spec,
        smooth.construct.mrf.smooth.spec,
+       smooth.construct.sos.smooth.spec,
        smooth.construct.ad.smooth.spec,
        summary.gam,sp.vcov,
        t2,te,tensor.prod.model.matrix,tensor.prod.penalties,
